# garmin-sync

./: .gitignore  .linear.toml  30-Minute Blast.json  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  README.md  garmin-exercises.csv  garmin-exercises.json  push_monday.py  pyproject.toml  requirements.txt  test_activities.py  test_push.py
.claude/cache/agents/debug-agent/: latest-output.md
garmin-sync-web/: .gitignore  README.md  package-lock.json  package.json
garmin-sync-web/api/: garmin.py  requirements.txt
garmin-sync-web/api/garmin/: disconnect.py  login.py  push-workout.py
garmin-sync-web/public/: manifest.json
garmin-sync-web/scripts/: generate-icons.js
garmin-sync-web/src/: middleware.ts
garmin-sync-web/src/app/: layout.tsx  page.tsx
garmin-sync-web/src/app/dashboard/: activities-section.tsx  logout-button.tsx  page.tsx
garmin-sync-web/src/app/login/: page.tsx
garmin-sync-web/src/app/privacy/: page.tsx
garmin-sync-web/src/app/signup/: page.tsx
garmin-sync-web/src/components/: exercise-mapping-row.tsx
garmin-sync-web/src/lib/: garmin-exercises.ts  rate-limit.ts
garmin-sync-web/src/types/: next-pwa.d.ts
garmin-sync-web/supabase/migrations/: 001_initial_schema.sql  002_garmin_tokens.sql  003_workouts.sql  004_activities.sql  005_workout_settings.sql
src/: __init__.py  garmin_client.py  main.py  schemas.py
static/: index.html
thoughts/ledgers/: CONTINUITY_CLAUDE-garmin-sync.md
thoughts/research/: Garmin Strength Workout API Issues.rtf
thoughts/shared/plans/: 2026-01-18-garmin-sync-full-buildout.md  fix-review-issues.md
(+12 files in other folders)
