[project]
name = "garmin-sync"
version = "0.1.0"
description = "Sync strength workouts with Garmin Connect"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "garth>=0.4.0",
    "fitdecode>=0.10.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
